Begin update to Godot 4.6. Add Place Detection test/demo. Cache style data. Update HTML template.

--- a/praxisHtmlShell.html
+++ b/praxisHtmlShell.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
-		<title>GPS Web Export</title>
+		<title>$GODOT_PROJECT_NAME</title>
 		<style>
 html, body, #canvas {
 	margin: 0;
@@ -77,7 +77,7 @@ body {
 }
 
 #status-notice {
-	background-color: #5b3943;
+	background-color: $GODOT_SPLASH_COLOR;
 	border-radius: 0.5rem;
 	border: 1px solid #9b3943;
 	color: #e0e0e0;
@@ -90,9 +90,7 @@ body {
 	z-index: 1;
 }
 		</style>
-		<link id="-gd-engine-icon" rel="icon" type="image/png" href="GPS Web Export.icon.png" />
-<link rel="apple-touch-icon" href="GPS Web Export.apple-touch-icon.png"/>
-
+		$GODOT_HEAD_INCLUDE
 	</head>
 	<body>
 <script>
@@ -119,7 +117,7 @@ body {
 	
 	function startListening()
 	{
-		return navigator.geolocation.watchPosition(gotLoc, null, {timeout: 1000, enableHighAccuracy: true});
+		return navigator.geolocation.watchPosition(gotLoc, null, { timeout: 1000, enableHighAccuracy: true});
 	}
 	function gotLoc(coords)
 	{
@@ -128,6 +126,9 @@ body {
 	function currentPos()
 	{
 		return JSON.stringify(lastLoc);
+	}
+	function locError(error){
+		alert('GPS Error: ' + error);
 	}
 
 	</script>
@@ -140,7 +141,7 @@ body {
 		</noscript>
 
 		<div id="status">
-			<img id="status-splash" class="show-image--true fullsize--true use-filter--true" src="GPS Web Export.png" alt="">
+			<img id="status-splash" class="$GODOT_SPLASH_CLASSES" src="$GODOT_SPLASH" alt="">
 			<progress id="status-progress"></progress>
 			<div id="status-notice"></div>
 		</div>
@@ -148,7 +149,7 @@ body {
 		<script src="$GODOT_URL"></script>
 		<script>
 const GODOT_CONFIG = $GODOT_CONFIG
-const GODOT_THREADS_ENABLED = false;
+const GODOT_THREADS_ENABLED = $GODOT_THREADS_ENABLED;;
 const engine = new Engine(GODOT_CONFIG);
 
 (function () {
